# kaliber

./: .clang-format  .gitignore  .gn  .travis.yml  BUILD.gn  README.md  privacy.md
assets/: BUILD.gn  chromatic_aberration.glsl_fragment  chromatic_aberration.glsl_vertex  sky.glsl_fragment  sky.glsl_vertex  sky_without_nebula.glsl_fragment
assets/demo/: BUILD.gn  chromatic_aberration.glsl_fragment  chromatic_aberration.glsl_vertex  sky.glsl_fragment  sky.glsl_vertex  sky_without_nebula.glsl_vertex
assets/engine/: BUILD.gn  imgui.glsl_fragment  imgui.glsl_vertex  pass_through.glsl_fragment  pass_through.glsl_vertex  quad.mesh  solid.glsl_fragment  solid.glsl_vertex
assets/teapot/: BUILD.gn  pbr.glsl_fragment  pbr.glsl_vertex  teapot.mesh
src/: LICENSE
src/base/: BUILD.gn  asset_file.cc  asset_file.h  asset_file_android.cc  asset_file_linux.cc  closure.h  collusion_test.cc  collusion_test.h  concurrent_stack.h  file.h  hash.h  interpolation.h  log.cc  log.h  mem.cc  mem.h  misc.h  random.cc  random.h  semaphore.h  sinc_resampler.cc  sinc_resampler.h  spinlock.h  task_runner.cc  task_runner.h  thread_pool.cc  thread_pool.h  timer.cc  timer.h  vecmath.cc  vecmath.h  worker.cc  worker.h
src/demo/: BUILD.gn  credits.cc  credits.h  damage_type.h  demo.cc  demo.h  enemy.cc  enemy.h  hud.cc  hud.h  menu.cc  menu.h  player.cc  player.h  sky_quad.cc  sky_quad.h
src/engine/: BUILD.gn  animatable.cc  animatable.h  animator.cc  animator.h  asset.h  drawable.cc  drawable.h  engine.cc  engine.h  font.cc  font.h  game.h  game_factory.h  image.cc  image.h  image_quad.cc  image_quad.h  imgui_backend.cc  imgui_backend.h  input_event.h  mesh.cc  mesh.h  persistent_data.cc  persistent_data.h  shader_source.cc  shader_source.h  solid_quad.cc  solid_quad.h  sound.cc  sound.h  sound_player.cc  sound_player.h
src/engine/asset/: font.cc  font.h  image.cc  image.h  mesh.cc  mesh.h  shader_source.cc  shader_source.h  sound.cc  sound.h
src/engine/audio/: BUILD.gn  audio.h  audio_alsa.cc  audio_alsa.h  audio_base.cc  audio_base.h  audio_bus.cc  audio_bus.h  audio_device.h  audio_device_alsa.cc  audio_device_alsa.h  audio_device_null.h  audio_device_oboe.cc  audio_device_oboe.h  audio_device_wasapi.cc  audio_device_wasapi.h  audio_driver.h  audio_driver_alsa.cc  audio_driver_alsa.h  audio_driver_delegate.h  audio_driver_oboe.cc  audio_driver_oboe.h  audio_forward.h  audio_mixer.cc  audio_mixer.h  audio_oboe.cc  audio_oboe.h  audio_resource.cc  audio_resource.h  audio_sample.h  audio_sink.h  audio_sink_alsa.cc  audio_sink_alsa.h  audio_sink_delegate.h  audio_sink_null.h  audio_sink_oboe.cc  audio_sink_oboe.h  mixer_input.cc  mixer_input.h  sinc_resampler.cc  (+1 more)
src/engine/platform/: BUILD.gn  asset_file.cc  asset_file.h  asset_file_android.cc  asset_file_generic.cc  asset_file_linux.cc  platform.cc  platform.h  platform_android.cc  platform_android.h  platform_base.cc  platform_base.h  platform_forward.h  platform_glfw.cc  platform_linux.cc  platform_linux.h  platform_observer.h  platform_win.cc
src/engine/platform/java/com/kaliber/base/: KaliberActivity.java
src/engine/renderer/: BUILD.gn  geometry.cc  geometry.h  opengl.h  render_command.cc  render_command.h  render_resource.cc  render_resource.h  renderer.cc  renderer.h  renderer_android.cc  renderer_linux.cc  renderer_types.cc  renderer_types.h  shader.cc  shader.h  texture.cc  texture.h
src/engine/renderer/opengl/: opengl.h  render_command.cc  render_command.h  renderer_opengl.cc  renderer_opengl.h  renderer_opengl_android.cc  renderer_opengl_linux.cc  renderer_opengl_win.cc
src/engine/renderer/vulkan/: renderer_vulkan.cc  renderer_vulkan.h  renderer_vulkan_android.cc  renderer_vulkan_glfw.cc  renderer_vulkan_linux.cc  renderer_vulkan_win.cc  vulkan_context.cc  vulkan_context.h  vulkan_context_android.cc  vulkan_context_glfw.cc  vulkan_context_linux.cc  vulkan_context_win.cc
src/gel/: BUILD.gn  exec.cc  exec.h  gel.cc  gel.h  git.cc  git.h  git_diff.cc  git_diff.h  git_log.cc  git_log.h  pipe.cc  pipe.h  proc_runner.cc  proc_runner.h
src/hello_world/: BUILD.gn  hello_world.cc
src/teapot/: BUILD.gn  camera.cc  camera.h  scene.cc  scene.h  teapot.cc
