copy("assets") {
  sources = [
    "bead.png",
    "boss_explosion.mp3",
    "boss_intro.mp3",
    "Boss_ok_lvl2.png",
    "Boss_ok_lvl3.png",
    "Boss_ok.png",
    "BUILD.gn",
    "chromatic_aberration.glsl_fragment",
    "chromatic_aberration.glsl_vertex",
    "enemy_anims_01_frames_ok.png",
    "enemy_anims_02_frames_ok.png",
    "enemy_anims_blast_ok.png",
    "enemy_anims_flare_ok.png",
    "enemy_ray_ok.png",
    "enemy_target_single_ok.png",
    "explosion.mp3",
    "Game_2_Boss.mp3",
    "Game_2_Main.mp3",
    "hit.mp3",
    "laser.mp3",
    "menu_click.mp3",
    "menu_icons.png",
    "no_nuke.mp3",
    "nuke_frames.png",
    "nuke_pack_OK.png",
    "nuke.mp3",
    "PixelCaps!.ttf",
    "powerup-pick.mp3",
    "powerup-spawn.mp3",
    "renderer_logo.png",
    "shield.mp3",
    "sky_without_nebula.glsl_fragment",
    "sky_without_nebula.glsl_vertex",
    "sky.glsl_fragment",
    "sky.glsl_vertex",
    "stealth.mp3",
    "woom_enemy_shield.png",
    "woom_logo_start_frames_01.png",
    "woom_logo_start_frames_02-03.png",
  ]

  outputs = ["$root_out_dir/assets/{{source_file_part}}"]
}
