copy("engine") {
  sources = [
    "RobotoMono-Regular.ttf",
    "imgui.glsl_fragment",
    "imgui.glsl_vertex",
    "pass_through.glsl_fragment",
    "pass_through.glsl_vertex",
    "solid.glsl_fragment",
    "solid.glsl_vertex",
  ]

  outputs = [ "$root_out_dir/assets/engine/{{source_file_part}}" ]
}
