source_set("base") {
  sources = [
    "closure.h",
    "collusion_test.cc",
    "collusion_test.h",
    "file.h",
    "hash.h",
    "interpolation.h",
    "log.cc",
    "log.h",
    "mem.h",
    "misc.h",
    "random.cc",
    "random.h",
    "sinc_resampler.cc",
    "sinc_resampler.h",
    "task_runner.cc",
    "task_runner.h",
    "thread_pool.cc",
    "thread_pool.h",
    "timer.cc",
    "timer.h",
    "vecmath.h",
  ]

#  ldflags = []
#  libs = []

  if (target_os == "linux") {
#    ldflags += [ "-L/usr/X11R6/lib" ]

#    libs += [ "X11", "rt", "pthread" ]
  }

  deps = []
}
