import("//build/utils.gni")

game_tmpl("demo") {
  sources = [
    "credits.cc",
    "credits.h",
    "damage_type.h",
    "demo.cc",
    "demo.h",
    "enemy.cc",
    "enemy.h",
    "hud.cc",
    "hud.h",
    "menu.cc",
    "menu.h",
    "player.cc",
    "player.h",
    "sky_quad.cc",
    "sky_quad.h",
  ]
  deps = [
    "//assets",
    "//src/base",
    "//src/engine",
  ]
}
