source_set("engine") {
  sources = [
    "animatable.cc",
    "animatable.h",
    "animator.cc",
    "animator.h",
    "asset/font.cc",
    "asset/font.h",
    "asset/image.cc",
    "asset/image.h",
    "asset/mesh.cc",
    "asset/mesh.h",
    "asset/shader_source.cc",
    "asset/shader_source.h",
    "asset/sound.cc",
    "asset/sound.h",
    "drawable.cc",
    "drawable.h",
    "engine.cc",
    "engine.h",
    "game.h",
    "game_factory.h",
    "image_quad.cc",
    "image_quad.h",
    "imgui_backend.cc",
    "imgui_backend.h",
    "input_event.h",
    "persistent_data.cc",
    "persistent_data.h",
    "solid_quad.cc",
    "solid_quad.h",
    "sound_player.cc",
    "sound_player.h",
  ]

  deps = [
    "//assets/engine",
    "//src/base",
    "//src/engine/audio",
    "//src/engine/platform",
    "//src/engine/renderer",
    "//src/third_party/imgui",
    "//src/third_party/jsoncpp",
    "//src/third_party/minimp3",
    "//src/third_party/stb",
    "//src/third_party/texture_compressor",
  ]
}
