source_set("audio") {
  sources = [
    "audio_bus.cc",
    "audio_bus.h",
    "audio_device.h",
    "audio_mixer.cc",
    "audio_mixer.h",
    "mixer_input.cc",
    "mixer_input.h",
    "sinc_resampler.cc",
    "sinc_resampler.h",
  ]

  libs = []
  deps = [ "//src/base" ]

  if (target_os == "linux") {
    sources += [
      "audio_device_alsa.cc",
      "audio_device_alsa.h",
    ]
    libs += [ "asound" ]
  } else if (target_os == "win") {
    sources += [
      "audio_device_wasapi.cc",
      "audio_device_wasapi.h",
    ]
  } else if (target_os == "android") {
    sources += [
      "audio_device_oboe.cc",
      "audio_device_oboe.h",
    ]
    deps += [ "//src/third_party/oboe" ]
  }
}
